--- a/Stylingcode.css
+++ b/Stylingcode.css
@@ -17,6 +17,7 @@ body {
 h1 {
     font-size: 30px;
     font-weight: 700;
+    padding-bottom: 2rem;
     color: #f89a02;
     text-transform: uppercase;
     letter-spacing: 2px;
